--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: wekan
+name: wekan-liuzh
 version: 0
 version-script: git describe --dirty --tags |  cut -c 2-
 summary: The open-source kanban
